parametrized + exec during test phase