@@ -120,25 +120,25 @@ limitations under the License.
           <target>1.7</target>
         </configuration>
       </plugin>
-      <!--
+      
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.2.1</version>
+        <version>1.3.2</version>
+        <executions>
+          <execution>
+            <phase>test</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
-          <executable>java</executable>
-          <longClasspath>true</longClasspath>
-          <arguments>
-            <argument>-XX:MaxPermSize=128M</argument>
-            <argument>-Xmx1024M</argument>
-            <argument>-Xdebug</argument>
-            <argument>-Xrunjdwp:transport=dt_socket,address=8888,server=y,suspend=n</argument>
-            <argument>-classpath</argument>
-            <classpath/>
-          </arguments>
+          <killAfter>-1</killAfter>
+          <mainClass>net.tirasa.adsddl.Main</mainClass>
         </configuration>
       </plugin>
-      -->
+      
     </plugins>
   </build>
   
